# lida

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  manual_test_visualization.py  nginx.conf  pyproject.toml  verify_import.py
config/: cfg.yml
docs/: capabilities.md
lida/components/: manager.py  scaffold.py
lida/components/viz/: vizeditor.py
lida/web/: app.py
lida/web/ui/: component---src-pages-demo-tsx-54fd6da10fa870d8d843.js
lida/web/ui/demo/: index.html
notebooks/: tutorial.ipynb
src/lida/: __init__.py  cli.py  datamodel.py  llm_types.py  utils.py
src/lida/application/: lida_app.py  services.py
src/lida/components/: executor.py  gemini_generator.py  goal.py  heuristic_goal.py  heuristic_viz.py  infographer.py  litellm_generator.py  manager.py  persona.py  scaffold.py  summarizer.py
src/lida/components/viz/: __init__.py  vizeditor.py  vizevaluator.py  vizexplainer.py  vizgenerator.py  vizrecommender.py  vizrepairer.py
src/lida/domain/: models.py  ports.py
src/lida/infrastructure/adapters/: execution.py  executor.py  goal.py  infographics.py  llm.py  persona.py  summarization.py  summarizer.py  viz.py
src/lida/infrastructure/services/: scaffold.py
src/lida/web/: __init__.py  app.py
src/lida/web/frontend/: index.html  package-lock.json  package.json
src/lida/web/frontend/src/: App.css  App.tsx  index.css
src/lida/web/frontend/src/components/: FileUploader.tsx  GoalGenerator.tsx  GoalsBoard.tsx  ModelSelector.tsx  PipelineProgress.tsx  ProgressBar.tsx  StageTracker.tsx  TableProgressList.tsx  TokenCounter.tsx  (+1 more)
tests/: conftest.py  manual_test_auto_flow.py  manual_test_heuristic.py  manual_verify.py  test_api_endpoints.py  test_architecture.py  test_components.py
(+2 files in other folders)
